2009-05-18 17:27-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProject.m: Add new project directory name.
	* Framework/PCProjectManager.m: Fix issue reported with loading of
	subprojects from an aggregate project.   Changed loadProjectAt: method
	to handle both the current and old file locations.

2009-04-27 17:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProjectManager.m: Remove logic requiring projectWindow
	to be key in order to save file.   This was causing files in 
	tear-off editors to not be saved.  This change is in the saveFile
	method.

2009-04-22 16:31-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProject.m: Changes to make plist output in
	human readable format.
	* Resources/Info-gnustep.plist: Changes to read C++ files using
	C editor.

2009-04-15 Sergii Stoian <stoyan255@gmail.com>
	
	* Framework/PCProjectBuilder.m:
	(-startBuild:), (-startClean:): Move _isBuilding and _isCleaning vars
	before build: method call for correct determination in cleanupAfterMake
	method.
	(build:): Initialize build time vars before call to preBuildChecj 
	method.
	* Framework/PCProjectBuilderOptions.m: Do not notify when changing 
	project properties (build options).

2009-03-31 Riccardo Mottola <rmottola@users.sf.net>
	
	* PCSplitView: removed and replaced with standard NSSplitView in all 
	instances
	
2009-03-28 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: 
	(updateTargetField): Process args correctly when it has nil value.
	(startBuild): Move initializing of currentBuildPath and 
	currentBuildFile from here...
	(build:):...to here. Rename pipes and handles vars to more appropriate
	names. Initialize pipes with alloc, init.
	(startClean): Use buildArguments as in startBuild method.
	(stopMake:): It seems that [makeTask isRunning] works correctly -
	use it. Remove comment.
	(cleanupAfterMake): Use _isBuilding and _isCleaning vars to detect