@@ -1,3 +1,9 @@
+2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Framework/PCEditorManager.m: Added code in -openEditorForFile:
+	editable:windowed: to open files which are not handled by any editor
+	using [NSWorkspace openFile:] as a fallback.
+
 2009-05-18 17:27-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Framework/PCProject.m: Add new project directory name.
